=Profile and product Update Has completed

--- a/app/src/main/res/layout/activity_edit_product.xml
+++ b/app/src/main/res/layout/activity_edit_product.xml
@@ -5,187 +5,187 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
-<androidx.constraintlayout.widget.ConstraintLayout
- android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Products.CreateProduct"
-    android:padding="5dp">
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btnBack"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/btn_back_create_product"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatButton>
-
-    <TextView
-        android:id="@+id/TopCreateProduct"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/colorPrimary"
-        android:gravity="center"
-        android:text="Create Product"
-        android:textColor="@color/lightDark"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></TextView>
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraingLayoutForPhotos"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/TopCreateProduct">
+        android:layout_height="match_parent"
+        tools:context=".Products.EditProduct"
+        android:padding="5dp">
 
-
-        <!--    <androidx.appcompat.widget.AppCompatButton-->
-        <!--                android:id="@+id/btnAddPhotos"-->
-        <!--                android:layout_width="70dp"-->
-        <!--                android:layout_height="70dp"-->
-        <!--                android:background="@drawable/circle_line_add_photo_background"-->
-        <!--                android:textColor="@color/white"-->
-        <!--                android:textStyle="bold"-->
-        <!--                app:layout_constraintTop_toTopOf="parent"-->
-        <!--                app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--                app:layout_constraintRight_toRightOf="parent"-->
-        <!--                app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--                >-->
-        <!--      </androidx.appcompat.widget.AppCompatButton>-->
-
-
-        <ImageView
-            android:id="@+id/FixedAddButtonOne"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/image_upload_product"
-            app:layout_constraintBottom_toBottomOf="@+id/PhotoOne"
-            app:layout_constraintEnd_toEndOf="@+id/PhotoOne"
-            app:layout_constraintStart_toStartOf="@+id/PhotoOne"
-            app:layout_constraintTop_toTopOf="@+id/PhotoOne"></ImageView>
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/PhotoOne"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_margin="1dp"
-            android:background="@drawable/background_product_upload_images"
-            app:layout_constraintEnd_toStartOf="@id/PhotoTwo"
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnBack"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/btn_back_create_product"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatImageView>
+            app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatButton>
 
-        <ImageButton
-            android:id="@+id/IB_remove_PhotoOne"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/remove_image_icon"
-            app:layout_constraintEnd_toStartOf="@id/PhotoTwo"
-            app:layout_constraintTop_toTopOf="parent"></ImageButton>
-
-
-        <ImageView
-            android:id="@+id/FixedAddButtonTwo"
-            android:layout_width="40dp"
+        <TextView
+            android:id="@+id/TopCreateProduct"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:background="@drawable/image_upload_product"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/PhotoThree"
-            app:layout_constraintStart_toStartOf="@+id/PhotoThree"
-            app:layout_constraintTop_toBottomOf="@+id/PhotoOne"></ImageView>
+            android:background="@color/colorPrimary"
+            android:gravity="center"
+            android:text="Create Product"
+            android:textColor="@color/lightDark"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></TextView>
 
-        <ImageView
-            android:id="@+id/FixedAddButtonThree"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/image_upload_product"
-            app:layout_constraintBottom_toBottomOf="@+id/PhotoTwo"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraingLayoutForPhotos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/PhotoOne"
-            app:layout_constraintTop_toTopOf="@+id/PhotoTwo"></ImageView>
-
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/PhotoTwo"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_margin="1dp"
-            android:background="@drawable/background_product_upload_images"
-            app:layout_constraintEnd_toEndOf="parent"
-
-            app:layout_constraintStart_toEndOf="@id/PhotoOne"
-            app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatImageView>
-
-        <ImageButton
-            android:id="@+id/IB_remove_PhotoTwo"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/remove_image_icon"
-            app:layout_constraintEnd_toEndOf="@id/PhotoTwo"
-            app:layout_constraintTop_toTopOf="parent"></ImageButton>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/TopCreateProduct">
 
 
+            <!--    <androidx.appcompat.widget.AppCompatButton-->
+            <!--                android:id="@+id/btnAddPhotos"-->
+            <!--                android:layout_width="70dp"-->
+            <!--                android:layout_height="70dp"-->
+            <!--                android:background="@drawable/circle_line_add_photo_background"-->
+            <!--                android:textColor="@color/white"-->
+            <!--                android:textStyle="bold"-->
+            <!--                app:layout_constraintTop_toTopOf="parent"-->
+            <!--                app:layout_constraintLeft_toLeftOf="parent"-->
+            <!--                app:layout_constraintRight_toRightOf="parent"-->
+            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--                >-->
+            <!--      </androidx.appcompat.widget.AppCompatButton>-->
 
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/PhotoThree"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_margin="1dp"
-            android:background="@drawable/background_product_upload_images"
-            app:layout_constraintEnd_toStartOf="@id/PhotoFour"
+            <ImageView
+                android:id="@+id/FixedAddButtonOne"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/image_upload_product"
+                app:layout_constraintBottom_toBottomOf="@+id/PhotoOne"
+                app:layout_constraintEnd_toEndOf="@+id/PhotoOne"
+                app:layout_constraintStart_toStartOf="@+id/PhotoOne"
+                app:layout_constraintTop_toTopOf="@+id/PhotoOne"></ImageView>
 
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/PhotoOne"></androidx.appcompat.widget.AppCompatImageView>
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/PhotoOne"
+                android:layout_width="0dp"
+                android:layout_height="80dp"
+                android:layout_margin="1dp"
+                android:background="@drawable/background_product_upload_images"
+                app:layout_constraintEnd_toStartOf="@id/PhotoTwo"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatImageView>
 
-        <ImageButton
-            android:id="@+id/IB_remove_PhotoThree"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="82dp"
-            android:src="@drawable/remove_image_icon"
-            app:layout_constraintEnd_toEndOf="@+id/PhotoThree"
-            app:layout_constraintTop_toTopOf="parent"></ImageButton>
+            <ImageButton
+                android:id="@+id/IB_remove_PhotoOne"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/remove_image_icon"
+                app:layout_constraintEnd_toStartOf="@id/PhotoTwo"
+                app:layout_constraintTop_toTopOf="parent"></ImageButton>
 
 
-        <ImageView
-            android:id="@+id/FixedAddButtonFour"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:background="@drawable/image_upload_product"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/PhotoFour"
-            app:layout_constraintTop_toBottomOf="@+id/PhotoTwo"></ImageView>
+            <ImageView
+                android:id="@+id/FixedAddButtonTwo"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/image_upload_product"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/PhotoThree"
+                app:layout_constraintStart_toStartOf="@+id/PhotoThree"
+                app:layout_constraintTop_toBottomOf="@+id/PhotoOne"></ImageView>
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/PhotoFour"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            android:layout_margin="1dp"
-            android:background="@drawable/background_product_upload_images"
-            app:layout_constraintEnd_toEndOf="parent"
+            <ImageView
+                android:id="@+id/FixedAddButtonThree"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/image_upload_product"
+                app:layout_constraintBottom_toBottomOf="@+id/PhotoTwo"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/PhotoOne"
+                app:layout_constraintTop_toTopOf="@+id/PhotoTwo"></ImageView>
 
-            app:layout_constraintStart_toEndOf="@id/PhotoThree"
-            app:layout_constraintTop_toBottomOf="@+id/PhotoTwo"></androidx.appcompat.widget.AppCompatImageView>
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/PhotoTwo"
+                android:layout_width="0dp"
+                android:layout_height="80dp"
+                android:layout_margin="1dp"
+                android:background="@drawable/background_product_upload_images"
+                app:layout_constraintEnd_toEndOf="parent"
 
-        <ImageButton
-            android:id="@+id/IB_remove_PhotoFour"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="82dp"
-            android:src="@drawable/remove_image_icon"
-            app:layout_constraintEnd_toEndOf="@+id/PhotoFour"
-            app:layout_constraintTop_toTopOf="parent"></ImageButton>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                app:layout_constraintStart_toEndOf="@id/PhotoOne"
+                app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatImageView>
 
-    <com.google.android.material.textfield.TextInputLayout
+            <ImageButton
+                android:id="@+id/IB_remove_PhotoTwo"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/remove_image_icon"
+                app:layout_constraintEnd_toEndOf="@id/PhotoTwo"
+                app:layout_constraintTop_toTopOf="parent"></ImageButton>
+
+
+
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/PhotoThree"
+                android:layout_width="0dp"
+                android:layout_height="80dp"
+                android:layout_margin="1dp"
+                android:background="@drawable/background_product_upload_images"
+                app:layout_constraintEnd_toStartOf="@id/PhotoFour"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/PhotoOne"></androidx.appcompat.widget.AppCompatImageView>
+
+            <ImageButton
+                android:id="@+id/IB_remove_PhotoThree"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="80dp"
+                android:src="@drawable/remove_image_icon"
+                app:layout_constraintEnd_toEndOf="@+id/PhotoThree"
+                app:layout_constraintTop_toTopOf="parent"></ImageButton>
+
+
+            <ImageView
+                android:id="@+id/FixedAddButtonFour"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/image_upload_product"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/PhotoFour"
+                app:layout_constraintTop_toBottomOf="@+id/PhotoTwo"></ImageView>
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/PhotoFour"
+                android:layout_width="0dp"
+                android:layout_height="80dp"
+                android:layout_margin="1dp"
+                android:background="@drawable/background_product_upload_images"
+                app:layout_constraintEnd_toEndOf="parent"
+
+                app:layout_constraintStart_toEndOf="@id/PhotoThree"
+                app:layout_constraintTop_toBottomOf="@+id/PhotoTwo"></androidx.appcompat.widget.AppCompatImageView>
+
+            <ImageButton
+                android:id="@+id/IB_remove_PhotoFour"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="80dp"
+                android:src="@drawable/remove_image_icon"
+                app:layout_constraintEnd_toEndOf="@+id/PhotoFour"
+                app:layout_constraintTop_toTopOf="parent"></ImageButton>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/txtInputLayoutProductName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
