--- a/app/src/main/res/layout/activity_edit_product.xml
+++ b/app/src/main/res/layout/activity_edit_product.xml
@@ -28,7 +28,7 @@
             android:layout_height="40dp"
             android:background="@color/colorPrimary"
             android:gravity="center"
-            android:text="Create Product"
+            android:text="Edit Product"
             android:textColor="@color/lightDark"
             android:textSize="18dp"
             android:textStyle="bold"
@@ -267,7 +267,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
-                            android:inputType="number"
+                            android:inputType="text"
                             android:hint="Size"
                             android:paddingLeft="5dp"
                             android:textColor="@color/LightBlack"
